# django-opencrm

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
.github/workflows/: linting.yml  release.yml  tests.yml
core/: settings.py  urls.py
opencrm/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
opencrm/migrations/: 0001_initial.py  0002_tag_contact_last_contacted_contact_tag_task.py  0003_alter_contact_company.py  0004_contact_created_at_contact_updated_at.py  0005_alter_contact_company.py  0006_alter_note_contact.py  0007_companytype_alter_note_options_alter_task_options.py  0008_company_company_type.py  0009_remove_company_company_type_company_tag.py  0010_rename_tag_company_type.py  0011_rename_type_companytype_name.py  0012_alter_company_name_alter_company_type.py  0013_alter_contact_tag.py  0014_alter_note_text.py  0015_alter_contact_company_alter_task_contact.py
opencrm/static/opencrm/: contact-search.js
opencrm/static/opencrm/js/: contact-search.js  upcoming-tasks.js
opencrm/templates/opencrm/: add_company.html  add_companytype.html  add_contact.html  add_note.html  add_tag.html  add_task.html  all_companies.html  all_companytypes.html  all_contacts.html  all_notes.html  all_tags.html  all_tasks.html  base.html  company_details.html  companytype_details.html  contact-search.html  contact_details.html  edit_company.html  edit_companytype.html  edit_contact.html  edit_note.html  edit_tag.html  edit_task.html  index.html  navbar.html  note_details.html  tag_details.html  task_details.html  upcoming_tasks.html
opencrm/templates/opencrm/partials/: contact-search.html  edit_form.html  footer.html  messages.html  navbar.html  upcoming_tasks.html
opencrm/tests/: test_models.py  test_settings.py  test_signals.py  test_views.py
