[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-opencrm"
version = "0.1.0"
description = "Reusable Django CRM app for NGOs and small businesses"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2,<5.3",
    "pillow>=12.0",
    "python-decouple>=3.8",
    "django-widget-tweaks>=1.5.1,<2.0",
]   

authors = [
    { name = "Jonne Saloranta" }
]

license = "MIT"
license-files = ["LICEN[CS]E.*"]

keywords = ["django", "CRM"]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79